--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>moderno</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/libs.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a href="#">
+                            <img src="images/logo.png" width="145px" height="50px" alt="">
+                        </a>
+                    </div>
+                    <div class="header__text">
+                        <a href="#">
+                            <span>Need help?</span>
+                        </a>
+                        Talk to an expert
+                        <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="header__box">
+                        <a href="#" class="basket"></a>
+                        <a href="#" class="header__btn header__btn-login">login</a>
+                        <a href="#" class="header__btn header__btn-register">register</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li>
+                            <a href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                About
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                WordPress
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Joomla
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                PSD
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Plugins
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Components
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Pages
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Contact
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Help
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section class="search">
+        <div class="container">
+            <div class="search__inner">
+                
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
